# cerberus

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  conanfile.txt
include/: cerberus.h  kinect.h  kinect_manager.h
include/cerberus/: cerberus.h  kinect.h  kinect_manager.h  usb_dev_service.h
include/cerberus/cameras/: camera.h  manager.h  usb_cam.h  usb_descriptors.txt  utils.h  uvc_cam.h
include/cerberus/cameras/kinect/: kinect.h
include/cerberus/cameras/usb/: usb_cam.h
include/cerberus/terminal/: base_menu.h  kinect_tui.h  menu.h  tui.h  webcam_tui.h
include/cerberus/utilities/: c_callback.h  si_units.h  thread_pool.h  units.h
include/cerberus/utilities/logger/: logger.h
include/terminal/: menu.h  tui.h
src/: cerberus.cpp  driver.cpp
src/cerberus/: cerberus.cpp  driver.cpp
src/cerberus/cameras/: manager.cpp  usb_cam.cpp  uvc_cam.cpp
src/cerberus/terminal/: menu.cpp
src/terminal/: menu.cpp  tui.cpp
testing/: opencv.cpp
